// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components/Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jDwBTQ kNNiPi"
  >
    <table
      className="sc-gPEVay cXYnbV"
    >
      <tbody
        className="sc-jlyJG bbyJzT"
      >
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            US
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            PL
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Warsaw
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            DE
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Berlin
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            FR
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Paris
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            ES
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Madird
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jDwBTQ kNNiPi"
  >
    <table
      className="sc-gPEVay cXYnbV"
    >
      <thead
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-gipzik eWgPnm"
        >
          <th
            className="sc-Rmtcm fyqsKl"
          >
            Code
          </th>
          <th
            className="sc-Rmtcm fyqsKl"
          >
            Capital
          </th>
          <th
            className="sc-Rmtcm fyqsKl"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jlyJG bbyJzT"
      >
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            US
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            PL
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Warsaw
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            DE
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Berlin
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            FR
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Paris
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-csuQGl gWzEso"
          >
            ES
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Madird
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jDwBTQ kNNiPi"
  >
    <table
      className="sc-gPEVay cXYnbV"
    >
      <thead
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-gipzik eWgPnm"
        >
          <th
            className="sc-Rmtcm fyqsKl"
          >
            #
          </th>
          <th
            className="sc-Rmtcm fyqsKl"
          >
            Code
          </th>
          <th
            className="sc-Rmtcm fyqsKl"
          >
            Capital
          </th>
          <th
            className="sc-Rmtcm fyqsKl"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jlyJG bbyJzT"
      >
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-bRBYWo kokgxh"
          >
            1
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            US
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-bRBYWo kokgxh"
          >
            2
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            PL
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Warsaw
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-bRBYWo kokgxh"
          >
            3
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            DE
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Berlin
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-bRBYWo kokgxh"
          >
            4
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            FR
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Paris
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-gipzik eWgPnm"
        >
          <td
            className="sc-bRBYWo kokgxh"
          >
            5
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            ES
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Madird
          </td>
          <td
            className="sc-csuQGl gWzEso"
          >
            Spain
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
